--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -101,9 +101,13 @@ jobs:
           DOCKER_IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME }}
           DEPLOYMENT_NAME: ${{ vars.DEPLOYMENT_NAME }}
           CONTAINER_NAME: ${{ vars.CONTAINER_NAME }}
+          AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
         run: |
           echo "$KUBE_CONFIG_DATA" | base64 -d > kubeconfig
           export KUBECONFIG=kubeconfig
+          kubectl set env deployment/$DEPLOYMENT_NAME AZURE_OPENAI_API_KEY=$AZURE_OPENAI_API_KEY
+          kubectl set env deployment/$DEPLOYMENT_NAME AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT
           kubectl set image deployment/$DEPLOYMENT_NAME $CONTAINER_NAME=$DOCKER_USERNAME/$DOCKER_IMAGE_NAME:latest
           kubectl rollout restart deployment/$DEPLOYMENT_NAME
       - name: Verify Deployment
